# cs225a_FireOne

./: .gitignore  CMakeLists.txt  README.md
Fireone/: CMakeLists.txt  New_file  addfire.txt  controller.cpp  panda_arm.urdf  redis_keys.h  simviz.cpp  world.urdf
hw0/: hw0.cpp  hw0_viz.cpp
hw2/: hw2.cpp  simviz_hw2.cpp  simviz_hw2_slow.cpp
hw3/: CMakeLists.txt  hw3.cpp  simviz_hw3.cpp  simviz_hw3_force.cpp  simviz_hw3_force_slow.cpp  simviz_hw3_slow.cpp
hw3/data_files/: dummy.txt
hw3/models/: panda_arm.urdf  world_w_box.urdf
hw3/plots/: plotting_hw3.py  utils.py
include/: object.h
model/MobileBase/meshes/visual/: FireOne_Base.mtl  Mobile_Base_01.mtl  Mobile_Base_02.mtl  Mobile_Base_03.mtl
model/iiwa14/: iiwa14.urdf
model/room/meshes/visual/: Final_walls.mtl  Walls_with_markings.mtl
model/test_objects/meshes/visual/: cat_v2.mtl  cup.mtl
panda_gripper_example/: simviz.cpp
template_project/: simviz.cpp
toro_example/: controller.cpp  simviz.cpp  toro.urdf
